removed devices units (`vh`/`vw`) from top element to prevent scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -36,14 +36,18 @@ body {
   --yelAlt: #f8d12f;
   background-color: var(--bgColorAlt);
   color: var(--fgColor);
+  min-height: 100%;
+  min-width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 /* Needed for proper Footer */
 #root {
-  min-height: 100vh;
-  min-width: 100vw;
-  height: 100%;
-  width: 100%;
+  min-height: inherit;
+  min-width: inherit;
+  height: inherit;
+  width: inherit;
 }
 
 /* Footer is made by making outer .App
